adding mmm's comments

--- a/4.mss/tex/main.tex
+++ b/4.mss/tex/main.tex
@@ -62,10 +62,10 @@
 
 
 \noindent
-Number of words - Abstract: 189\\
-Number of words - main text: 5568\\
+Number of words - Abstract: 192\\
+Number of words - main text: 5570\\
 3 Figures in main text.\\
-Number of references: 84\\
+Number of references: 85\\
 
 \noindent
 \textbf{Keywords:} Species interactions, competition, facilitation, network, population dynamics, interaction strength, non-trophic, annual plants.  
@@ -88,10 +88,10 @@ Data will be submitted to Dryad upon publication.
     \begin{enumerate}
     \item{Network theory allows us to understand complex systems by evaluating how their constituent elements interact with one another. Such networks are built from matrices which describe the effect of each element on all others. Quantifying the strength of these interactions from empirical data can be difficult, however, because the number of potential interactions increases non-linearly as more elements are included in the system, and not all interactions may be empirically observable when some elements are rare.}
     \item{We present a novel modelling framework which estimates the strength of pairwise interactions in diverse horizontal systems, using measures of species performance in the presence of varying densities of their potential interaction partners.}
-    \item{Our method allows us to directly estimate pairwise effects when they are statistical identifiable and approximate pairwise effects when they would otherwise be statistically unidentifiable. The resulting interaction matrices can include positive and negative effects, the effect of a species on itself, and are non-symmetrical.} 
-    \item{The advantages of these features are illustrated with a case study on an annual wildflower community of 22 focal and 52 neighbouring species, with potential applications of this framework extending well beyond plant community ecology.}
+    \item{Our method allows us to directly estimate pairwise effects when they are statistically identifiable and approximate pairwise effects when they would otherwise be statistically unidentifiable. The resulting interaction matrices can include positive and negative effects, the effect of a species on itself, and are non-symmetrical.} 
+    \item{The advantages of these features are illustrated with a case study on an annual wildflower community of 22 focal and 52 neighbouring species, and a discussion of potential applications of this framework extending well beyond plant community ecology.}
 \end{enumerate}
-% Abstract = 189 words
+% Abstract = 192 words
 
 \section{Introduction}
 
@@ -119,7 +119,7 @@ Data will be submitted to Dryad upon publication.
 \paragraph{} 
 We developed a joint modeling framework to estimate pairwise interactions which benefits from several distinguishing features including the ability to estimate both \textit{identifiable} interactions (direct estimates from the observed data) and \textit{unidentifiable} interactions (when observations are missing or too few). After describing the required data (\ref{meth:data} below), we show how one can estimate identifiable interactions with a unique interaction parameter as described in the neighbour-density dependent model (\ref{meth:nddm}).
 % edit below
-We then define and select which interactions are identifiable and which are not (\ref{meth:id_params}). Independently to the first model, we also describe a response--impact model (\ref{meth:rim}) where species have a singular effect on neighbours, and a singular response. This allows us to estimate unidentifiable interactions as the product of element-specific response and impact parameters. Both models contribute to the overall joint model likelihood as detailed in \ref{meth:addlog}.
+We then show how to define and select which interactions are identifiable and which are not (\ref{meth:id_params}) based on the data available. Independently from the first model, we also describe a response--impact model (\ref{meth:rim}) where species have a singular effect on neighbours, and a singular response. This allows us to estimate unidentifiable interactions as the product of element-specific response and impact parameters. Both models contribute to the overall joint model likelihood as detailed in \ref{meth:addlog}.
 Taken together, identifiable and unidentifiable interaction estimates are then used to populate community interaction matrices for the system that describes the effects of all interaction partners on the performance of all focal species. 
 
 %, i.e. when elements are observed to co-occur enough times and at varying densities such that the effect of one element on the performance of the other can be reliably estimated via regression. Conversely, the interaction effect of element $j$ on element $i$ is is deemed unidentifiable when there are none or too few measures of the performance of $i$ in the presence of varying densities of $j$. 
@@ -158,7 +158,7 @@ Taken together, identifiable and unidentifiable interaction estimates are then u
     \label{meth:id_params}
 
     \paragraph{}
-    A common issue in observational datasets is that some species or elements may not be observed to interact with many other species or to interact at sufficiently variable densities because data sampling is limited in space and time. This can create a situation in which we cannot estimate all potential interaction parameters ($\beta_{i,j}$) in the NDDM specified above, especially for rare species $j$. For an interaction parameter to be \textit{identifiable}, and thus inferrable by the NDDM, the data must contain measurements of the performance of $i$ when interacting with $j$ at varying densities. Moreover, the vector of densities of $j$ associated to measurements of focal $i$ must be linearly independent to all other vectors of densities of other species interacting with $i$. For example, if two species $a$ and $b$ interact with focal $i$ yet have the same density at every measurement or equally proportional densities at every measurement, neither $\beta_{i, a}$ nor $\beta_{i, b}$ will be inferrable by the NDDM. We define \textit{identifiable} interactions as those which are inferrable following the above assumptions, and \textit{unidentifiable} interactions as those which are not. We construct a matrix $Q$ of size $s \times t$, with $Q_{i, j} = 1$ if the corresponding $\beta_{i, j}$ parameter is identifiable, and $Q_{i, j} = 0$ if not. How we mathematically construct this $Q$ matrix is shown in the code shared with the github repository associated to this paper.
+    A common issue in observational datasets is that some species or elements may not be observed to interact with many other species or to interact at sufficiently variable densities because data sampling is limited in space and time. This can create a situation in which we cannot estimate all potential interaction parameters ($\beta_{i,j}$) in the NDDM specified above, especially for rare species $j$. For an interaction parameter to be \textit{identifiable}, and thus inferrable by the NDDM, the data must contain measurements of the performance of $i$ when interacting with $j$ at varying densities. Moreover, the vector of densities of $j$ associated with measurements of focal $i$ must be linearly independent to all other vectors of densities of other species interacting with $i$. For example, if two species $a$ and $b$ interact with focal $i$ yet have the same density at every measurement or equally proportional densities at every measurement, neither $\beta_{i, a}$ nor $\beta_{i, b}$ will be inferrable by the NDDM. We define \textit{identifiable} interactions as those which are inferrable following the above assumptions, and \textit{unidentifiable} interactions as those which are not. We construct a matrix $Q$ of size $s \times t$, with $Q_{i, j} = 1$ if the corresponding $\beta_{i, j}$ parameter is identifiable, and $Q_{i, j} = 0$ if not. How we verify linear independance between vectors of neighbour densities and mathematically construct this $Q$ matrix is shown in the code shared with the github repository associated to this paper.
     
     \subsection{Unidentifiable parameters and the response--impact model}
     \label{meth:rim}
@@ -183,7 +183,7 @@ Taken together, identifiable and unidentifiable interaction estimates are then u
         B = Q \circ \tilde B + (1 - Q) \circ r e^T
         \label{matB}
         \end{equation}
-    where $\circ$ represents the elementwise (Hadamard) product, $Q$ is the matrix of identifiable interactions, and $\tilde B$ is an $s \times t$ matrix that only has free parameters inferred in the locations where $Q_{i, j} =1$. In other words, the final interaction matrix $B$ takes a free parameter from the NDDM when that parameter is identifiable, and the corresponding RIM estimate, $r_i e_j$, when that parameter is not.
+    where $Q$ is the matrix of identifiable interactions, and $\tilde B$ is an $s \times t$ matrix that only has free parameters inferred in the locations where $Q_{i, j} =1$. $\circ$ represents the elementwise (Hadamard) product, whereby each element $i, j$ of the first matrix is multiplied by the $i, j$ element of the second matrix, resulting in a matrix of the same dimension as the operands. In other words, the final interaction matrix $B$ takes a free parameter from the NDDM when that parameter is identifiable, and the corresponding RIM estimate, $r_i e_j$, when that parameter is not.
 
     \paragraph{}
     We can fit all parameters simultaneously by requiring that both the NDDM and RIM contribute to an overall joint model log likelihood:
@@ -203,7 +203,7 @@ Taken together, identifiable and unidentifiable interaction estimates are then u
     where both sums are across all $n$ observations, ${\rm Pr}$ is the probability density for the model (e.g.\ negative binomial), $p_k$ the vector of measured performances, $\gamma, r, e,$ and $B$ are parameters as defined in Eqs.~\ref{nddm} and \ref{rim}, and $\dots$ includes any other parameters (e.g.\ dispersion if using a negative binomial distribution for the data). Note that $p_k$ and $\gamma$ are common to both the RIM and NDDM.
 
     \paragraph{}
-    For a hypothetical dataset with which all interactions are identifiable, then $B = \tilde B$ and fitting the RIM is not strictly unnecessary. The parameter vectors $r$ and $e$ would still be estimated, but they are independent of the parameters in $\tilde B$ and hence maximization of both likelihoods is independent. Conversely, if no interactions are identifiable then the joint model devolves to the RIM only. In the middle ground---where the majority of datasets are likely to lie---the joint model framework allows us to estimate free interaction parameters when possible, and use $r_i e_j$ estimates when not. An important distinction to make is that the NDDM estimates identifiable interactions only, whereas the RIM estimates all interactions, pairwise identifiable and pairwise unidentifiable. However, by maximising Eq. \ref{loglikjoint} we allow both models to provide good fits to the data but also for $r$ and $e$ to ``adjust'' around inferred values of $\tilde B$. 
+    For a hypothetical dataset with which all interactions are identifiable, then $B = \tilde B$ and fitting the RIM is not strictly necessary. The parameter vectors $r$ and $e$ would still be estimated, but they are independent of the parameters in $\tilde B$ and hence maximization of both likelihoods is independent. Conversely, if no interactions are identifiable then the joint model devolves to the RIM only. In the middle ground---where the majority of datasets are likely to lie---the joint model framework allows us to estimate free interaction parameters when possible, and use $r_i e_j$ estimates when not. An important distinction to make is that the NDDM estimates identifiable interactions only, whereas the RIM estimates all interactions, pairwise identifiable and pairwise unidentifiable. However, by maximising Eq. \ref{loglikjoint} we allow both models to provide good fits to the data but also for $r$ and $e$ to ``adjust'' around inferred values of $\tilde B$. 
 
 
     \subsection{Making interaction parameters comparable across focal species} 
@@ -262,10 +262,10 @@ Taken together, identifiable and unidentifiable interaction estimates are then u
 
     \paragraph{}
     %We first applied this joint model to simulated data to verify that the original interaction parameters could be recovered by this framework. We then applied this model to a case study dataset of a diverse annual wildflower community, where focal elements consisted of \textbf{$s = 22$} focal species and up to \textbf{$k = 52$} neighbouring species (the 22 focal species and an additional 30 species) and performance $p$ was measured as viable seed production. 
-    The model returned estimates for all 1144 interactions between 22 focal species and 52 interacting species, of which 56.7\% were identifiable and estimated by the NDDM.  When accounting for interactions between focal species only, 82.0\% of interactions were identifiable. We conducted a posterior predictive check comparing simulated performance data from the joint model to observed values (Figure \ref{fig:ppcheckmu2}), this is especially important for verifying that the appropriate distribution and link function are being used for the data at hand. The joint model also returns simulated performance data for the RIM only, which we also checked visually (Supplementary Results \ref{SI:results} Figure \ref{fig:ppcheckmu1}). Model parameters were sampled 1000 times from the 80\% posterior confidence intervals returned by STAN to construct our parameter estimates. Interaction estimates were scaled according to focal intrinsic fitness into interaction strengths comparable between focal species, and we applied bootstrap sampling from each resulting interaction strength distribution to create 1000 samples of the pscaled community interaction matrix.
+    The model returned estimates for all 1144 interactions between 22 focal species and 52 interacting species, of which 56.7\% were identifiable and estimated by the NDDM.  When accounting for interactions between focal species only, 82.0\% of interactions were identifiable. We conducted a posterior predictive check comparing simulated performance data from the joint model to observed values (Figure \ref{fig:ppcheckmu2}), this is especially important for verifying that the appropriate distribution and link function are being used for the data at hand. The joint model also returns simulated performance data for the RIM only, which we also checked visually (Supplementary Results \ref{SI:results} Figure \ref{fig:ppcheckmu1}). Model parameters were sampled 1000 times from the 80\% posterior confidence intervals returned by STAN to construct our parameter estimates. Interaction estimates were scaled according to focal intrinsic fitness into interaction strengths comparable between focal species, and we applied bootstrap sampling from each resulting interaction strength distribution to create 1000 samples of the scaled community interaction matrix.
 
     \paragraph{}
-    For our case study, the resulting community interaction matrix was non-symmetrical and included both positive (competitive) and negative (facilitative) values, as shown in Figures \ref{fig:netwks}.A \& B. Here we represent the community matrix as a network between all 22 focal species, taking the median value of each scaled interaction  across all samples. Overall, 63.6\% of focal species had a median interspecific interaction strength which was competitive, making competition the dominant interaction type. The median value of 46.7\% of focal $\times$ neighbour interactions however were facilitative, as were the medians of 43.3\% of all focal $\times$ focal interactions. As a result, 47.6\% of interactions between pairs of focal species were of opposing signs such that $i$ competes with $j$ but $j$ facilitates $i$. Furthermore, the elements of the diagonal (the effect of a species on itself) were able to be estimated, which allows us to quantify how much a species regulates it's own performance. For 11 of our 22 focal species, the scaled distributions of these intraspecific effects did not overlap with 0, which suggests individuals of those species have a non-trivial effect on other individuals of the same species.
+    For our case study, the resulting community interaction matrix was non-symmetrical and included both positive (competitive) and negative (facilitative) values, as shown in Figures \ref{fig:netwks}.A \& B. Here we represent the community matrix as a network between all 22 focal species, taking the median value of each scaled interaction  across all samples. Overall, 63.6\% of focal species had a median interspecific interaction strength which was competitive, making competition the dominant interaction type. The median value of 46.7\% of focal $\times$ neighbour interactions , however, were facilitative, as were the medians of 43.3\% of all focal $\times$ focal interactions. As a result, 47.6\% of interactions between pairs of focal species were of opposing signs such that $i$ competes with $j$ but $j$ facilitates $i$. Furthermore, the elements of the diagonal (the effect of a species on itself) were able to be estimated, which allows us to quantify how much a species regulates it's own performance. For 11 of our 22 focal species, the scaled distributions of these intraspecific effects did not overlap with 0, which suggests individuals of those species have a non-trivial effect on other individuals of the same species.
 
 
     %\paragraph{}
@@ -275,18 +275,18 @@ Taken together, identifiable and unidentifiable interaction estimates are then u
     \subsection{Examples of ecological applications}
 
     \paragraph{}
-    We illustrate a few potential applications of our framework by exploring questions of common ecological relevance and how these can be answered using the results from our case study. Each question below highlights some of the advantages of our resulting interaction network: intraspecific interactions, non-symmetrical interactions, and the ability to estimate positive and negative interactions. We were unfortunately unable to compare our results to other methods for estimating such a diverse set of plant-plant interactions because there are currently none other that we are aware of.
+    We illustrate a few potential applications of our framework by exploring questions of common ecological relevance and how these can be answered using the results from our case study. Each question below highlights some of the advantages of our resulting interaction network: intraspecific interactions, non-symmetrical interactions, and the ability to estimate positive and negative interactions. We were unfortunately unable to compare our results to other methods for estimating such a diverse set of plant-plant interactions because there are currently none other that we are aware of that do this.
 
 
     \subsubsection*{Do abundant natives under-regulate their population density compared to rarer native species?}
     One hypothesis as to why certain plant species are more abundant than others is that they tend to compete with themselves less strongly than rare species \parencite{Yenni2012, Yenni2017}. Hypothetically, this release from intraspecific competition pressure allows them to reach much higher densities than species which strongly compete with themselves. In our case study, we can explore this hypothesis by plotting the effect of a species on itself (the diagonal of the community interaction matrix, or intraspecific interactions) against it's density as in Figure \ref{fig:species}.A. Intraspecific interactions are at their weakest when close to $0$. The two most abundant native species \textit{Velleia rosea} (VERO) and \textit{Podolepsis canescens} (POCA) highlighted in purple fall very close to the median intraspecific interaction strength. This suggests that \textit{V. rosea} and \textit{P. canescens} do not reach high densities through an under-regulation of their population density but through other means (e.g.\ access to a larger niche space). 
 
     \subsubsection*{Which species may be taking on keystone roles in the system?}
-    Keystone species have strong effects on the dynamics of the whole ecosystem, such that their exclusion from a community can create significant changes in species density and composition \parencite{Paine1969}. Furthermore, the impact of keystone species on other species is disproportionately large relative to their density \parencite{Power1996, Piraino2002, Libralato2006}. The keystone species concept is  relevant to ecosystem management and conservation in helping identify species of particular importance for the safeguarding of a whole system \parencite{Soule2005a}. Though determining which species truly serve keystone roles has historically involved extensive ecological experimentation (e.g.\ \cite{Paine1992}), we can identify potential candidates by comparing a species' impact on the population growth of other species to it's own density \parencite{Libralato2006}. It is important to note that because our framework allows for asymmetrical interactions, we are able to differentiate a species' impact on other species from it's response or sensitivity to neighbours \parencite{Broekman2020}. Figure \ref{fig:species}.B highlights two native species in green which may be potential keystone species due to having strongly competitive effects on the rest of the community overall, despite rather low densities: \textit{Trachymene ornata} (TROR) and \textit{Gilberta tenuifolia} (GITE). .
+    Keystone species have strong effects on the dynamics of the whole ecosystem, such that their exclusion from a community can create significant changes in species density and composition \parencite{Paine1969}. Furthermore, the impact of keystone species on other species is disproportionately large relative to their density \parencite{Power1996, Piraino2002, Libralato2006}. The keystone species concept is  relevant to ecosystem management and conservation in helping identify species of particular importance for the safeguarding of a whole system \parencite{Soule2005a}. Though determining which species truly serve keystone roles has historically involved extensive ecological experimentation (e.g.\ \cite{Paine1992}), we can identify potential candidates by comparing a species' impact on the population growth of other species to it's own density \parencite{Libralato2006}. It is important to note that because our framework allows for asymmetrical interactions, we are able to differentiate a species' impact on other species from it's response or sensitivity to neighbours \parencite{Broekman2020}. Figure \ref{fig:species}.B highlights two native species in green which may be potential keystone species due to having strongly competitive effects on the rest of the community overall, despite  low densities: \textit{Trachymene ornata} (TROR) and \textit{Gilberta tenuifolia} (GITE). 
     
 
     \subsubsection*{Do all exotic species compete with native species?}
-    Though many invasive species compete with natives \parencite{Naeem2000, Corbin2004, Riley2008, Zheng2015}, several studies have found evidence of invasives facilitating natives, with cascading effects on other species and net positive effects on ecosystem processes \parencite{Rodriguez2006, Ramus2017}. By allowing for positive and negative interaction strengths between species in a system, we can determine which exotics are harmful or beneficial to a native's performance. Figure \ref{fig:species} C. plots the sum of a species competitive effects on neighbours against the sum of it's facilitative effects on neighbours. Exotic species are identified in red. Out of these three exotic species, two have overall competitive effects on the community: \textit{Arctotheca calendula} (ARCA) and \textit{Pentameris aroides} (PEAI). \textit{P. aroides} interacts weakly with neighbours, whether it is competing or facilitative, and \textit{A. calendula} does compete but still lies below the median sum of competitive effects for the community, it's overall competitive effect being largely driven by weak facilitation. \textit{Hypochaeris glabra} (HYPO) on the other hand has strong effects on other species, both competitive and facilitative, and has an overall facilitative contribution to the community. The results from our case study suggest that here at least, the effects of exotic species on native species are rather complex and species-dependent.
+    Though many invasive species compete with natives \parencite{Naeem2000, Corbin2004, Riley2008, Zheng2015}, several studies have found evidence of invasives facilitating natives, with cascading effects on other species and net positive effects on ecosystem processes \parencite{Rodriguez2006, Ramus2017, Wainwright2019}. By allowing for positive and negative interaction strengths between species in a system, we can determine which exotics are harmful or beneficial to a native's performance. Figure \ref{fig:species}.C plots the sum of a species' competitive effects on neighbours against the sum of it's facilitative effects on neighbours. Exotic species are identified in red. Out of these three exotic species, two have overall competitive effects on the community: \textit{Arctotheca calendula} (ARCA) and \textit{Pentameris aroides} (PEAI). \textit{P. aroides} interacts weakly with neighbours, whether it is competing or facilitative, and \textit{A. calendula} does compete but still lies below the median sum of competitive effects for the community, it's overall competitive effect being largely driven by weak facilitation. \textit{Hypochaeris glabra} (HYPO) on the other hand has strong effects on other species, both competitive and facilitative, and has an overall facilitative contribution to the community. The results from our case study suggest that here at least, the effects of exotic species on native species are complex and species-dependent.
 
     
 
@@ -323,7 +323,7 @@ Taken together, identifiable and unidentifiable interaction estimates are then u
 
 
     \paragraph{}
-    Our novel framework includes a versatile approach for estimating interactions between species which are not observed to cooccur. Identifiable interactions are estimated with a unique parameter, as opposed to the latent variables used to quantify unidentifiable interactions. Care should therefore be taken to assess the different assumptions behind our estimatation of identifiable and unidentifiable interactions, and how well these may apply to any particular system.I t is also important to consider the likely reasons for unidentifiable interactions. Forbidden links are a subset of potential interactions which cannot be observed, often due to physical constraints (e.g.\ biological mismatch) or spatio-temporal uncoupling. For example, a pair of short-lived annual plants might have such opposing phenologies that their growing seasons never overlap in the field. We direct the reader towards the literature on forbidden interactions \parencite{Olesen2011, Jordano2016} for solving these cases. 
+    Our novel framework includes a versatile approach for estimating interactions between species which are not observed to cooccur. Identifiable interactions are estimated with a unique parameter, as opposed to the latent variables used to quantify unidentifiable interactions. Care should therefore be taken to assess the different assumptions behind our estimatation of identifiable and unidentifiable interactions, and how well these may apply to any particular system. It is also important to consider the likely reasons for unidentifiable interactions. Forbidden links are a subset of potential interactions which cannot be observed, often due to physical constraints (e.g.\ biological mismatch) or spatio-temporal uncoupling. For example, a pair of short-lived annual plants might have such opposing phenologies that their growing seasons never overlap in the field. We direct the reader towards the literature on forbidden interactions \parencite{Olesen2011, Jordano2016} for solving these cases. 
 
         %\paragraph{}
         %Our framework assumes that though the total effect of one element on another increases with density, this relationship is linear. This may not always be the case however, as interactions may be invariant to density \parencite{} or scale non-linearly \parencite{}. Our framework also evaluates direct interactions only, and does not consider higher-order interactions \parencite{}. 
