--- a/4.mss/tex/main.tex
+++ b/4.mss/tex/main.tex
@@ -342,7 +342,7 @@ Taken together, identifiable and unidentifiable interaction estimates are then u
 
 \section*{Acknowledgements}
 
-We thank M. Raymundo \& I. Towers for the seed rate data used in this paper, C. Bowler, T. Britton, and J. Ikin for their work in sample processing for this data set, as well as Rob Freckleton and Jacopo Grilli for insightful comments on the manuscript. We would also like to thank Stefano Allesina and two anonymous reviewers for their valuable comments on an earlier version of this manuscript. We also wish to acknowledge the Traditional Custodians of the Country from the case study data was collected, the Yamatji People, as well as those of the land on which this research was conceived of, carried out, and written, the Jagera and Turrbal Peoples.This work was made possible by funding awarded to M.M.M. (DP170100837) by the Australian Research Council. D.B.S. is grateful for the support of the Marsden Fund Council, from New Zealand Government funding (grant 16-UOC-008).
+We thank M. Raymundo \& I. Towers for the seed rate data used in this paper, C. Bowler, T. Britton, and J. Ikin for their work in sample processing for this data set, as well as Rob Freckleton and Jacopo Grilli for insightful comments on the manuscript. We would also like to thank Stefano Allesina and two anonymous reviewers for their valuable comments on an earlier version of this manuscript. We also wish to acknowledge the Traditional Custodians of the Country from which the case study data was collected, the Yamatji People, as well as those of the land on which this research was conceived of, carried out, and written, the Jagera and Turrbal Peoples. This work was made possible by funding awarded to M.M.M. (DP170100837) by the Australian Research Council. D.B.S. is grateful for the support of the Marsden Fund Council, from New Zealand Government funding (grant 16-UOC-008).
 
 
 \section*{Competing interests}
